Bug 779385 - Help CSS authors diagnose why animations aren't async r=cjones