layout/style/AnimationCommon.cpp
@@ -220,17 +220,47 @@ bool
 CommonElementAnimationData::CanAnimatePropertyOnCompositor(const dom::Element *aElement,
                                                            nsCSSProperty aProperty)
 {
+  static bool sShouldLog;
+  static bool sShouldLogPrefCached;
+
+  if (!sShouldLogPrefCached) {
+    sShouldLogPrefCached = true;
+    Preferences::AddBoolVarCache(&sShouldLog,
+                                 "layers.offmainthreadcomposition.log-animations");
+  }
+
   nsIFrame* frame = aElement->GetPrimaryFrame();
   if (aProperty == eCSSProperty_opacity) {
-    return nsLayoutUtils::AreOpacityAnimationsEnabled();
+    bool enabled = nsLayoutUtils::AreOpacityAnimationsEnabled();
+    if (!enabled && sShouldLog) {
+      printf_stderr("Performance warning: Async animation of 'opacity' is disabled\n");
+    }
+    return enabled;
   }
-  if (aProperty == eCSSProperty_transform && !(frame &&
-      frame->Preserves3D() &&
-      frame->Preserves3DChildren())) {
-    if (frame && frame->IsSVGTransformed()) {
+  if (aProperty == eCSSProperty_transform) {
+    if (frame &&
+        frame->Preserves3D() &&
+        frame->Preserves3DChildren()) {
+      if (sShouldLog) {
+        printf_stderr("Gecko bug: Async animation of 'preserve-3d' transforms is not supported.  See bug 779598\n");
+      }
       return false;
     }
-    return nsLayoutUtils::AreTransformAnimationsEnabled();
+    if (frame && frame->IsSVGTransformed()) {
+      if (sShouldLog) {
+        printf_stderr("Gecko bug: Async 'transform' animations of frames with SVG transforms is not supported.  See bug 779599\n");
+      }
+      return false;
+    }
+    bool enabled = nsLayoutUtils::AreTransformAnimationsEnabled();
+    if (!enabled && sShouldLog) {
+      printf_stderr("Performance warning: Async animation of 'transform' is disabled\n");
+    }
+    return enabled;
+  }
+  if (sShouldLog) {
+    const nsAFlatCString propName = nsCSSProps::GetStringValue(aProperty);
+    printf_stderr("Performance warning: Async animation cancelled because of unsupported property '%s'\n", propName.get());
   }
   return false;
 }
